Skyrim hold formables
-Added formable hold decisions for Skyrim. They each require possession
of the capital of the hold plus the garrisoned fort associated with it
(the Pale and Winterhold require only the capital, as their forts are in
wasteland provinces). Holds cannot be formed by other holds or by Skyrim
itself.
-Slightly edited the Tear decision to make it fit Tamriel Rebuilt
nomenclature (Tear = Tyr Dres, or just Tyr in this case because it might
not be Dres who rebuilds it), and also to make it work better for
players not using Common Sense.

--- a/localisation/tamriel_decisions_l_english.yml
+++ b/localisation/tamriel_decisions_l_english.yml
@@ -50,3 +50,22 @@
  form_indoril_desc: "House Indoril still technically exists, although it is a mere formality compared to the Temple administration itself. However, seeing as we are now stronger than ever before, asserting that we are a free House of our own may be advantageous."
  rebuild_tear_title: "Rebuild Tear"
  rebuild_tear_desc: "Rebuild the destroyed city of Tear"
+ form_haafingar_title: "Claim the Jarldom of Haafingar"
+ form_haafingar_desc: "The unrest in Skyrim has led to the end of the bloodline of the Jarl of Haafingar. However, we now hold the hold's capital and fort, and so there is nothing stopping us from proclaiming our rule to be legitimate."
+ form_reach_title: "Claim the Jarldom of the Reach"
+ form_reach_desc: "The unrest in Skyrim has led to the end of the bloodline of the Jarl of the Reach. However, we now hold the hold's capital and fort, and so there is nothing stopping us from proclaiming our rule to be legitimate."
+ form_hjaalmarch_title: "Claim the Jarldom of Hjaalmarch"
+ form_hjaalmarch_desc: "The unrest in Skyrim has led to the end of the bloodline of the Jarl of Hjaalmarch. However, we now hold the hold's capital and fort, and so there is nothing stopping us from proclaiming our rule to be legitimate."
+ form_falkreath_title: "Claim the Jarldom of Falkreath"
+ form_falkreath_desc: "The unrest in Skyrim has led to the end of the bloodline of the Jarl of Falkreath. However, we now hold the hold's capital and fort, and so there is nothing stopping us from proclaiming our rule to be legitimate."
+ form_rift_title: "Claim the Jarldom of the Rift"
+ form_rift_desc: "The unrest in Skyrim has led to the end of the bloodline of the Jarl of the Rift. However, we now hold the hold's capital and fort, and so there is nothing stopping us from proclaiming our rule to be legitimate."
+ form_eastmarch_title: "Claim the Jarldom of Eastmarch"
+ form_eastmarch_desc: "The unrest in Skyrim has led to the end of the bloodline of the Jarl of Eastmarch. However, we now hold the hold's capital and fort, and so there is nothing stopping us from proclaiming our rule to be legitimate."
+ form_winterhold_title: "Claim the Jarldom of Winterhold"
+ form_winterhold_desc: "The unrest in Skyrim has led to the end of the bloodline of the Jarl of Winterhold. However, we now hold the hold's capital and fort, and so there is nothing stopping us from proclaiming our rule to be legitimate."
+ form_pale_title: "Claim the Jarldom of the Pale"
+ form_pale_desc: "The unrest in Skyrim has led to the end of the bloodline of the Jarl of the Pale. However, we now hold the hold's capital and fort, and so there is nothing stopping us from proclaiming our rule to be legitimate."
+ form_whiterun_title: "Claim the Jarldom of Whiterun"
+ form_whiterun_desc: "The unrest in Skyrim has led to the end of the bloodline of the Jarl of Whiterun. However, we now hold the hold's capital and fort, and so there is nothing stopping us from proclaiming our rule to be legitimate."
+ 
