Elsweyr coup d'etat events
Added events for the Elsweye coup d'etat. Needs balancing!

--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -221,3 +221,8 @@
  TAMRIEL_BOOKMARK_DESC: "Wait, where the hell did Earth go?"
  swampy_jungle: "Swampy Jungle"
  swampy_jungle_desc: "A combination of thick jungle and marsh in the same landscape. Home to a baffling array of flora and fauna, much of it deadly, some of it life-saving. This kind of terrain is truly the native's best friend and the outlander's worst enemy."
+ thalmor_coup_title: "Thalmor Rebels"
+ thalmor_coup_name: "Thalmor Coup d'état"
+ thalmor_coup_desc: "Rebels trying to dissolve the Elsweyr Confederacy"
+ thalmor_coup_demand: "Dissolution of the Elsweyr Confederacy"
+ thalmor_coup_army: "Thalmor Rebel Army"
