--- a/localisation/tamriel_areas_and_regions_l_english.yml
+++ b/localisation/tamriel_areas_and_regions_l_english.yml
@@ -76,23 +76,25 @@
  argonia_superregion: "Argonia"
  kagrenzel_area: "Veloth's End"
  tolvald_area: "Tolvalde"
- eastmarch_volcanic_area: "Eastmarch"
+ eastmarch_volcanic_area: "Alto"
  eastmarch_river_area: "White Eastmarch"
  whiterun_area: "White Valley"
- yorgrim_area: "Yorgrim"
+ whiterun_town_area: "Whiterun"
+ yorgrim_area: "East Pale"
  winterhold_area: "Winterhold"
- north_pale_area: "North Pale"
+ north_pale_area: "West Pale"
  old_skyrim_region: "Old Skyrim"
- north_falkreath_area: "Riverwood"
+ north_falkreath_area: "East Falkreath"
  south_falkreath_area: "South Falkreath"
- sungard_area: "Sungard"
- skyrim_jeralls_area: "Skyrim Jeralls"
+ sungard_area: "North Falkreath"
+ skyrim_jeralls_area: "Riften Jeralls"
  north_rift_area: "North Rift"
  south_rift_area: "South Rift"
  geirland_area: "Geirland"
  south_skyrim_region: "South Skyrim"
  rorikstead_area: "Rorikstead"
- hjaalmarch_area: "Hjaalmarch"
+ hjaalmarch_area: "Inner Hjaalmarch"
+ outer_hjaalmarch_area: "Outer Hjaalmarch"
  skyborn_area: "Skyborn Range"
  east_haafingar_area: "East Haafingar"
  mid_haafingar_area: "Mid Haafingar"
