--- a/localisation/tamriel_areas_and_regions_l_english.yml
+++ b/localisation/tamriel_areas_and_regions_l_english.yml
@@ -24,6 +24,7 @@
  uvonaak_area: "Uvonaak"
  shargon_othreleth_area: "Shargon-Othreleth"
  kragenmoor_area: "Kragen Valus"
+ shipal_area: "Shipal Shin"
  south_morrowind_region: "Argonian Borders"
  west_thirr_area: "West Aanthirin"
  roth_roryn_area: "Roth Roryn"
@@ -55,11 +56,15 @@
  axadnia_area: "Axadnia"
  kulania_area: "Kulania"
  kynokhia_region: "Kynokhia"
- kamanai_area: "Kamanai"
+ kamanai_area: "North Kamanai"
+ west_kamanai_area: "West Kamanai"
  ok_nanha_area: "Ok-Nanha"
+ naga_cradle_area: "Naga Cradle"
  argon_border_area: "Markhalt Border"
+ kamanese_region: "Northern Argonia"
  clawreach_area: "Clawreach"
- karanake_area: "Karanake"
+ karanake_area: "North Karanake"
+ doraku_area: "Doraku-Akashie"
  north_hjalokh_area: "Paatru-Agaceph"
  lake_hjalokh_area: "Ojomaug"
  sikiha_area: "Sikiha"
@@ -67,7 +72,8 @@
  karanakh_region: "Deep Argonia"
  arnesia_area: "Arnesia"
  north_atronium_area: "Wamasus-Reaven"
- north_cimuthrai_area: "Cimuthrai-Nieleon"
+ north_cimuthrai_area: "North Cimuthrai"
+ great_nieleon_area: "Greater Nieleon"
  xi_helai_area: "Xivilai"
  klamabe_area: "Klamabe"
  engan_area: "Enganzu"
