--- a/localisation/tamriel_prov_names_l_english.yml
+++ b/localisation/tamriel_prov_names_l_english.yml
@@ -103,7 +103,7 @@
  PROV3127: "Thirr"
  PROV3128: "Hajinto"
  PROV3129: "Ahkrin"
- PROV3130: "Khaminar"
+ PROV3130: "Yengrith"
  PROV3131: "Markhalt"
  PROV3132: "Corkarth"
  PROV3133: "Silvenar"
@@ -148,9 +148,9 @@
  PROV3172: "Alten"
  PROV3173: "Outer Vudai"
  PROV3174: "Branchmont"
- PROV3175: "Naga Cradle"
+ PROV3175: "Gan-Jugu"
  PROV3176: "Tenmar Wall"
- PROV3177: "Anazukh"
+ PROV3177: "Gandranen"
  PROV3178: "Glokchuba"
  PROV3179: "Kamanai"
  PROV3180: "Hixinoag"
@@ -170,7 +170,7 @@
  PROV3194: "Narima"
  PROV3195: "Karanganka"
  PROV3196: "Ossasoit"
- PROV3197: "Doraku"
+ PROV3197: "South Doraku"
  PROV3198: "Akashie"
  PROV3199: "Nakar"
  PROV3200: "Portdun"
@@ -192,7 +192,7 @@
  PROV3216: "Klamat"
  PROV3217: "Meirhall"
  PROV3218: "Ixitoton"
- PROV3219: "Kulan"
+ PROV3219: "East Kulan"
  PROV3220: "Saranyth"
  PROV3221: "Kunguma"
  PROV3222: "Asashpan"
@@ -465,7 +465,7 @@
  PROV3489: "Strand"
  PROV3490: "Gweden"
  PROV3491: "Anvil"
- PROV3492: "Stros M'Kai"
+ PROV3492: "Stirk"
  PROV3493: "Arenth Watch"
  PROV3494: "Catsclaw"
  PROV3495: "Weatherleah"
@@ -645,7 +645,7 @@
  PROV3669: "Xkudu"
  PROV3670: "Onija"
  PROV3671: "Hajnoag"
- PROV3672: "Pholmolo"
+ PROV3672: "Loriasel"
  PROV3673: "Onkobra"
  PROV3674: "Maupan"
  PROV3675: "Zerekoron"
@@ -700,6 +700,31 @@
  PROV3724: "Lake Poppad"
  PROV3725: "Priory Lake"
  PROV3726: "Malacath's Lake"
+ PROV3727: "Atanaz"
+ PROV3728: "Dejapaku"
+ PROV3729: "Xalhajei"
+ PROV3730: "Murkwater"
+ PROV3731: "Muth Gnaar"
+ PROV3732: "Septim's Gate"
+ PROV3733: "Hissmir"
+ PROV3734: "Mazzatun"
+ PROV3735: "North Doraku"
+ PROV3736: "Kxayu"
+ PROV3737: "Sanjai Hsin"
+ PROV3738: "Takusei"
+ PROV3739: "Valenwood"
+ PROV3740: "Xylo Sea"
+ PROV3741: "Southpoint Coast"
+ PROV3742: "Bay of Tarlain"
+ PROV3743: "Valenwood Approach"
+ PROV3744: "Cape Coast"
+ PROV3745: "Diss Shore"
+ PROV3746: "Strident Coast"
+ PROV3747: "Mouth of the Strid"
+ PROV3748: "Lower Strid"
+ PROV3749: "Anvil Harbour"
+ PROV3750: "Sea of Stirk"
+ PROV3751: "Northern Gold Coast"
  PROV_ADJ3026: "Tamriel"
  PROV_ADJ3027: "Far Sheogorad"
  PROV_ADJ3028: "Ald Daedroth"
@@ -804,7 +829,7 @@
  PROV_ADJ3127: "Thirr"
  PROV_ADJ3128: "Hajinto"
  PROV_ADJ3129: "Ahkrin"
- PROV_ADJ3130: "Khaminar"
+ PROV_ADJ3130: "Yengrith"
  PROV_ADJ3131: "Markhalt"
  PROV_ADJ3132: "Corkarth"
  PROV_ADJ3133: "Silvenar"
@@ -849,9 +874,9 @@
  PROV_ADJ3172: "Alten"
  PROV_ADJ3173: "Outer Vudai"
  PROV_ADJ3174: "Branchmont"
- PROV_ADJ3175: "Naga Cradle"
+ PROV_ADJ3175: "Gan-Jugu"
  PROV_ADJ3176: "Tenmar Wall"
- PROV_ADJ3177: "Anazukh"
+ PROV_ADJ3177: "Gandranen"
  PROV_ADJ3178: "Glokchuba"
  PROV_ADJ3179: "Kamanai"
  PROV_ADJ3180: "Hixinoag"
@@ -871,7 +896,7 @@
  PROV_ADJ3194: "Narima"
  PROV_ADJ3195: "Karanganka"
  PROV_ADJ3196: "Ossasoit"
- PROV_ADJ3197: "Doraku"
+ PROV_ADJ3197: "South Doraku"
  PROV_ADJ3198: "Akashie"
  PROV_ADJ3199: "Nakar"
  PROV_ADJ3200: "Portdun"
@@ -893,7 +918,7 @@
  PROV_ADJ3216: "Klamat"
  PROV_ADJ3217: "Meirhall"
  PROV_ADJ3218: "Ixitoton"
- PROV_ADJ3219: "Kulan"
+ PROV_ADJ3219: "East Kulan"
  PROV_ADJ3220: "Saranyth"
  PROV_ADJ3221: "Kunguma"
  PROV_ADJ3222: "Asashpan"
@@ -1166,7 +1191,7 @@
  PROV_ADJ3489: "Strand"
  PROV_ADJ3490: "Gweden"
  PROV_ADJ3491: "Anvil"
- PROV_ADJ3492: "Stros M'Kai"
+ PROV_ADJ3492: "Stirk"
  PROV_ADJ3493: "Arenth Watch"
  PROV_ADJ3494: "Catsclaw"
  PROV_ADJ3495: "Weatherleah"
@@ -1346,7 +1371,7 @@
  PROV_ADJ3669: "Xkudu"
  PROV_ADJ3670: "Onija"
  PROV_ADJ3671: "Hajnoag"
- PROV_ADJ3672: "Pholmolo"
+ PROV_ADJ3672: "Loriasel"
  PROV_ADJ3673: "Onkobra"
  PROV_ADJ3674: "Maupan"
  PROV_ADJ3675: "Zerekoron"
@@ -1390,3 +1415,39 @@
  PROV_ADJ3713: "Bulwark"
  PROV_ADJ3714: "Blankenmarch"
  PROV_ADJ3715: "Border Watch"
+ PROV_ADJ3716: "Esaren"
+ PROV_ADJ3717: "Horak"
+ PROV_ADJ3718: "Lhendal"
+ PROV_ADJ3719: "Hairab"
+ PROV_ADJ3720: "Lake Fjalding"
+ PROV_ADJ3721: "Lake Canulus"
+ PROV_ADJ3722: "Lake Mackamen"
+ PROV_ADJ3723: "Lake Arrius"
+ PROV_ADJ3724: "Lake Poppad"
+ PROV_ADJ3725: "Priory Lake"
+ PROV_ADJ3726: "Malacath's Lake"
+ PROV_ADJ3727: "Atanaz"
+ PROV_ADJ3728: "Dejapaku"
+ PROV_ADJ3729: "Xalhajei"
+ PROV_ADJ3730: "Murkwater"
+ PROV_ADJ3731: "Muth Gnaar"
+ PROV_ADJ3732: "Septim's Gate"
+ PROV_ADJ3733: "Hissmir"
+ PROV_ADJ3734: "Mazzatun"
+ PROV_ADJ3735: "North Doraku"
+ PROV_ADJ3736: "Kxayu"
+ PROV_ADJ3737: "Sanjai Hsin"
+ PROV_ADJ3738: "Takusei"
+ PROV_ADJ3739: "Valenwood"
+ PROV_ADJ3740: "Xylo Sea"
+ PROV_ADJ3741: "Southpoint Coast"
+ PROV_ADJ3742: "Bay of Tarlain"
+ PROV_ADJ3743: "Valenwood Approach"
+ PROV_ADJ3744: "Cape Coast"
+ PROV_ADJ3745: "Diss Shore"
+ PROV_ADJ3746: "Strident Coast"
+ PROV_ADJ3747: "Mouth of the Strid"
+ PROV_ADJ3748: "Lower Strid"
+ PROV_ADJ3749: "Anvil Harbour"
+ PROV_ADJ3750: "Sea of Stirk"
+ PROV_ADJ3751: "Northern Gold Coast"
