Culture split plus other random stuff
-Split the Cyrodilic culture group. Changed references to culture_group
= cyrodilic accordingly.
-Slightly buffed Argonia and nerfed Kanadesit and Atronium. (but for
some reason, Atronium still secedes within the first few years every.
single. time...)
-Shifted the Dunmer/Argonian cultural boundary slightly north in order
to make Kanadesit slightly less prone to rebels.
-Added Northern Argonian ideas for countries with Kamanese or Arnesian
primary culture.
-Dagoni minors no longer use "Inner" Argonian ideas.
-Very slightly altered the map in the northern Valus to make it a lot
harder to bypass Virak.

--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -31,7 +31,7 @@
  nordic_g: "Nordic"
  old_nordic: "Old Nordic"
  middle_nordic: "Middle Nordic"
- cyrodillic: "Cyrodilic"
+ cyrodillic: "Nibenese"
  gold_coaster: "Gold Coaster"
  west_wealder: "West Wealder"
  c_highlander: "Highlander"
@@ -226,3 +226,10 @@
  thalmor_coup_desc: "Rebels trying to dissolve the Elsweyr Confederacy"
  thalmor_coup_demand: "Dissolution of the Elsweyr Confederacy"
  thalmor_coup_army: "Thalmor Rebel Army"
+ allmaker_rebels_name: "All-Maker Zealots"
+ daedra_worship_rebels_name: "Daedric Zealots"
+ nine_divines_rebels_name: "Nine Divines Zealots"
+ hist_rebels_name: "Hist Zealots"
+ lunar_pantheon_rebels_name: "Lunar Pantheon Zealots"
+ new_temple_rebels_name: "New Temple Zealots"
+ talos_rebels_name: "Nordic Pantheon Zealots"
