--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -147,10 +147,15 @@
  archon: "Archon"
  gideon: "Gideon"
  kwama: "Kwama"
+ kwamaDESC: "Kwama are insect-like creatures native to Morrowind and in particular to Vvardenfell, which form underground colonies which can then be exploited as 'egg mines'. The kwama egg industry accounts for a significant proportion of Vvardenfell's economy."
  alchemical_goods: "Alchemical Supplies"
+ alchemical_goodsDESC: "Alchemical Supplies refers to the various natural and semi-natural ingredients that are not used as food, but which can be very useful in certain kinds of potion-making."
  hunted_goods: "Hunted Goods"
+ hunted_goodsDESC: "Hunted Goods represent the animals, plants and fungi yielded from expeditions into the wilderness. As not all of Tamriel practices agriculture, significant regions have hunted produce as their main export."
  potions: "Potions"
+ potionsDESC: "Trading in potions, along with enchanted items, is a common way for predominantly mage communities to gather funds to continue their studies and experiments. Such items are popular even among those who do not practice magic themselves."
  dwemer_parts: "Dwemer Parts"
+ dwemer_partsDESC: "The trade in Dwemer artefacts, although heavily controlled by the Empire in the Third Era, was so lucrative at times that smuggling them was fairly common. The trade has not diminished since the Cyrodiils left Morrowind."
  sadrith: "Sadrith"
  ashlands: "Ashlands"
  cyrodilic_empire: "Cyrodilic Empire"
