Lots of minor additions
-Nine Divines, Daedra Worship, New Temple, Lunar Pantheon, Dwemer
Reason, and All-Maker now have their own icons. Hist now uses the Mayan
icon.
-The Talos religion is now known as Nordic Pantheon.
-The various kinds of zealots now have their own icons.
-Added localisation for the zealots.
-Added missing Dwemer Reason zealots.
-Thalmor Coup rebels now have their own icon.
-Added proper descriptions for the Tamrielic units.
-Added proper descriptions for Great Houses, Tinker States, and the
Elsweyr Theocracy.
-Fixed the missing trade node localisation in Skyrim.
-Changed the terrain bmp in Morrowind and Argonia to better fit the
forced terrain overhaul from earlier.
-Fixed a few misplaced pixels and so forth in the province map.
-Clicking on Kamaci or Stirk no longer causes a CTD.
-Fixed Hrotanda Vale not having a historical ruler.
-The Dagoni/Mestizo-Argonian warlord states outside of Argonia proper
(Atatar, Blueblood, Teleman) are now regular warlord states (i.e. not
republican dictatorships) that happen to have Argonian culture, not
actual outposts of the An-Xileel state like the tributary provinces are.
-Jer Ahkrin is now a reformed province (dictatorship) rather than an
unreformed province (tribal democracy).
-Jer Ahkrin is now allied to Kanadesit.
-JA and KD are now historical rivals with Dres.
-Hlaalu and Redoran are now historical rivals.
-Hlaalu now has cores or permanent claims on the southern half of
Sadras.
-Dres now has permanent claims on every province (except Nuhyas) that
was Dres before the Red Year.
-The Valenwood and Valus wastelands no longer count as Nine Divines
provinces.

--- a/localisation/tamriel_areas_and_regions_l_english.yml
+++ b/localisation/tamriel_areas_and_regions_l_english.yml
@@ -127,12 +127,12 @@
  drakelowe_area: "Drakelowe"
  borderwatch_area: "Borderwatch"
  topal_bay_area: "Topal Bay"
- blackwood_area: "Blackwood"
+ blackwood_area: "Inner Blackwood"
  atatar_area: "Ayleid Paths"
  s_valus_area: "South Valus"
  altar_valley_area: "Altar Valley"
  skingrad_area: "Skingrad"
- valen_border_area: "Valenwood-Elseweyr Border"
+ valen_border_area: "Valenwood-Elsweyr Border"
  nornalhorst_area: "West Weald"
  city_isle_area: "City Isle"
  weye_area: "Weye"
