--- a/localisation/tamriel_areas_and_regions_names_l_english.yml
+++ b/localisation/tamriel_areas_and_regions_names_l_english.yml
@@ -16,13 +16,15 @@
  daimon_coast_area_name: "Retothril"
  almalexia_area_name: "Almalexia"
  kanadesit_area_name: "Jagdak Bay"
- east_thirr_area_name: "East Aanthirin"
+ east_thirr_area_name: "North East Aanthirin"
+ east_andaram_area_name: "North Andaram"
  indoril_region_name: "Indorith"
  jer_ahkrin_area_name: "Jer Ahkrin"
  kalen_area_name: "Kogo Kalen"
  uvonaak_area_name: "Uvonaak"
  shargon_othreleth_area_name: "Shargon-Othreleth"
  kragenmoor_area_name: "Kragen Valus"
+ shipal_area_name: "Shipal Shin"
  south_morrowind_region_name: "Argonian Borders"
  west_thirr_area_name: "West Aanthirin"
  roth_roryn_area_name: "Roth Roryn"
@@ -54,11 +56,15 @@
  axadnia_area_name: "Axadnia"
  kulania_area_name: "Kulania"
  kynokhia_region_name: "Kynokhia"
- kamanai_area_name: "Kamanai"
+ kamanai_area_name: "North Kamanai"
+ west_kamanai_area_name: "West Kamanai"
  ok_nanha_area_name: "Ok-Nanha"
+ naga_cradle_area_name: "Naga Cradle"
  argon_border_area_name: "Markhalt Border"
+ kamanese_region_name: "Northern Argonia"
  clawreach_area_name: "Clawreach"
- karanake_area_name: "Karanake"
+ karanake_area_name: "North Karanake"
+ doraku_area_name: "Doraku-Akashie"
  north_hjalokh_area_name: "Paatru-Agaceph"
  lake_hjalokh_area_name: "Ojomaug"
  sikiha_area_name: "Sikiha"
@@ -66,7 +72,8 @@
  karanakh_region_name: "Deep Argonia"
  arnesia_area_name: "Arnesia"
  north_atronium_area_name: "Wamasus-Reaven"
- north_cimuthrai_area_name: "Cimuthrai-Nieleon"
+ north_cimuthrai_area_name: "North Cimuthrai"
+ great_nieleon_area_name: "Greater Nieleon"
  xi_helai_area_name: "Xivilai"
  klamabe_area_name: "Klamabe"
  engan_area_name: "Enganzu"
@@ -75,23 +82,25 @@
  argonia_superregion_name: "Argonia"
  kagrenzel_area_name: "Veloth's End"
  tolvald_area_name: "Tolvalde"
- eastmarch_volcanic_area_name: "Eastmarch"
+ eastmarch_volcanic_area_name: "Alto"
  eastmarch_river_area_name: "White Eastmarch"
  whiterun_area_name: "White Valley"
- yorgrim_area_name: "Yorgrim"
+ whiterun_town_area_name: "Whiterun"
+ yorgrim_area_name: "East Pale"
  winterhold_area_name: "Winterhold"
- north_pale_area_name: "North Pale"
+ north_pale_area_name: "West Pale"
  old_skyrim_region_name: "Old Skyrim"
- north_falkreath_area_name: "Riverwood"
+ north_falkreath_area_name: "East Falkreath"
  south_falkreath_area_name: "South Falkreath"
- sungard_area_name: "Sungard"
- skyrim_jeralls_area_name: "Skyrim Jeralls"
+ sungard_area_name: "North Falkreath"
+ skyrim_jeralls_area_name: "Riften Jeralls"
  north_rift_area_name: "North Rift"
  south_rift_area_name: "South Rift"
  geirland_area_name: "Geirland"
  south_skyrim_region_name: "South Skyrim"
  rorikstead_area_name: "Rorikstead"
- hjaalmarch_area_name: "Hjaalmarch"
+ hjaalmarch_area_name: "Inner Hjaalmarch"
+ outer_hjaalmarch_area_name: "Outer Hjaalmarch"
  skyborn_area_name: "Skyborn Range"
  east_haafingar_area_name: "East Haafingar"
  mid_haafingar_area_name: "Mid Haafingar"
@@ -118,7 +127,7 @@
  drakelowe_area_name: "Drakelowe"
  borderwatch_area_name: "Borderwatch"
  topal_bay_area_name: "Topal Bay"
- blackwood_area_name: "Blackwood"
+ blackwood_area_name: "Inner Blackwood"
  atatar_area_name: "Ayleid Paths"
  s_valus_area_name: "South Valus"
  altar_valley_area_name: "Altar Valley"
