--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -71,7 +71,7 @@
  dwemeri_rg: "Dwarven"
  allmaker: "All-Maker"
  dwemer_reason: "Dwemer Reason"
- talos: "Talos"
+ talos: "Nordic Pantheon"
  daedra_worship: "Daedra Worship"
  lunar_pantheon: "Lunar Pantheon"
  SITHIS: "Sithis"
@@ -146,6 +146,9 @@
  murkwood: "Murkwood"
  archon: "Archon"
  gideon: "Gideon"
+ solitude: "Solitude"
+ whiterun: "Whiterun"
+ riften: "Riften"
  kwama: "Kwama"
  kwamaDESC: "Kwama are insect-like creatures native to Morrowind and in particular to Vvardenfell, which form underground colonies which can then be exploited as 'egg mines'. The kwama egg industry accounts for a significant proportion of Vvardenfell's economy."
  alchemical_goods: "Alchemical Supplies"
@@ -159,11 +162,11 @@
  sadrith: "Sadrith"
  ashlands: "Ashlands"
  cyrodilic_empire: "Cyrodilic Empire"
- cyrodilic_empire_desc: "The government of the Cyrodilic Empire"
+ cyrodilic_empire_desc: "The government of the Cyrodilic Empire."
  cyrodilic_warlord: "Cyrodilic Warlord State"
- cyrodilic_warlord_desc: "A warlord state that rose up during the chaos of the Stormcrown Interregnum"
+ cyrodilic_warlord_desc: "A warlord state that rose up during the chaos of the Stormcrown Interregnum."
  cyrodilic_city: "Cyrodilic Republic"
- cyrodilic_city_desc: "A Cyrodilic settlement that became independent during the Stormcrown Interregnum"
+ cyrodilic_city_desc: "A Cyrodilic settlement that became independent during the Stormcrown Interregnum."
  WARLORD_PETTY: "Petty Warlord State"
  WARLORD_KINGDOM: "Warlord State"
  WARLORD_EMPIRE: "Warlord Empire"
@@ -238,3 +241,47 @@
  lunar_pantheon_rebels_name: "Lunar Pantheon Zealots"
  new_temple_rebels_name: "New Temple Zealots"
  talos_rebels_name: "Nordic Pantheon Zealots"
+ dwemer_reason_rebels_name: "Dwemer Reason Zealots"
+ allmaker_rebels_demand:0 "Convert $COUNTRYNAME$"
+ allmaker_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ allmaker_rebels_title:0 "Religious"
+ allmaker_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ allmaker_rebels_army:0 "$RELIGION$ Army"
+ daedra_worship_rebels_demand:0 "Convert $COUNTRYNAME$"
+ daedra_worship_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ daedra_worship_rebels_title:0 "Religious"
+ daedra_worship_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ daedra_worship_rebels_army:0 "$RELIGION$ Army"
+ nine_divines_rebels_demand:0 "Convert $COUNTRYNAME$"
+ nine_divines_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ nine_divines_rebels_title:0 "Religious"
+ nine_divines_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ nine_divines_rebels_army:0 "$RELIGION$ Army"
+ hist_rebels_demand:0 "Convert $COUNTRYNAME$"
+ hist_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ hist_rebels_title:0 "Religious"
+ hist_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ hist_rebels_army:0 "$RELIGION$ Army"
+ lunar_pantheon_rebels_demand:0 "Convert $COUNTRYNAME$"
+ lunar_pantheon_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ lunar_pantheon_rebels_title:0 "Religious"
+ lunar_pantheon_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ lunar_pantheon_rebels_army:0 "$RELIGION$ Army"
+ new_temple_rebels_demand:0 "Convert $COUNTRYNAME$"
+ new_temple_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ new_temple_rebels_title:0 "Religious"
+ new_temple_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ new_temple_rebels_army:0 "$RELIGION$ Army"
+ talos_rebels_demand:0 "Convert $COUNTRYNAME$"
+ talos_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ talos_rebels_title:0 "Religious"
+ talos_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ talos_rebels_army:0 "$RELIGION$ Army"
+ dwemer_reason_rebels_demand:0 "Convert $COUNTRYNAME$"
+ dwemer_reason_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ dwemer_reason_rebels_title:0 "Religious"
+ dwemer_reason_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ dwemer_reason_rebels_army:0 "$RELIGION$ Army"
+ dunmer_great_house_desc: "One of the Great Houses of Morrowind. Officially part of a united Morrowind, but independent in reality. Exact governing practices vary from House to House."
+ tinker_state_desc: "The result of a visionary seeking to recreate a Dwemer-style state rebelling against the local Jarl during the Stormcrown Interregnum."
+ elsweyr_theocracy_desc: "A unique Khajiti form of theocracy, ruled by a Mane, a form of Khajiit that can only be born when Masser is eclipsed by Secunda."
