--- a/localisation/tamriel_units_and_tech_l_english.yml
+++ b/localisation/tamriel_units_and_tech_l_english.yml
@@ -14,5 +14,21 @@
  orsimer_infantry: "Orsimer Infantry"
  ra_gada_warriors: "Alik'r Warriors"
  senche_cavalry: "Senche Cavalry"
+ tamrielic_shock_cavalry: "White Anvil Cavalry"
  skyforge_infantry: "Skyforge Infantry"
  western_battlemage: "Western Battlemages"
+ akaviri_infantryDESCR: "Tamrielic infantry that has adopted weaponry and fighting arts from Akavir and combined them with local teachings to devastating effect."
+ argonian_alterorDESCR: "A traditional Atron form of soldier, the Alteror specialises in the use of Alteration magic in the heat of battle, creating magical shields and turning the enemy's weapons into soft metal."
+ argonian_skirmishersDESCR: "Predominantly Inner Argonian troops which are lightly armoured and have excellent command of the local terrain, and so are adept in the use of guerrilla tactics."
+ bosmeri_archersDESCR: "Archers from Valenwood in south-western Tamriel. The Bosmeri people are generally seen as being more proficient with the bow than any other people of Tamriel."
+ dagi_infantryDESCR: "Pellitine Khajiti warriors skilled in the arts of magic and stealth. An indispensable element to the mixed unit Khajiti brigades that were deployed to great effect during the Five Year War."
+ eastern_battlemageDESCR: "Battlemage infantry from Eastern Tamriel. Generally more proficient in fire magic and Alteration than their western counterparts."
+ imperial_infantryDESCR: "Central Tamrielic infantry that accounted for most soldiers in the army of the Septim Empire."
+ imperial_cavalryDESCR: "Central Tamrielic cavalry that was the predominant form of cavalry in the army of the Septim Empire."
+ khajiti_desert_walkersDESCR: "Khajiti skirmishers from Anequina. The large variety of Khajiti forms means that this kind of infantry is competent in, but not ideal for, most battle situations."
+ orsimer_infantryDESCR: "Orc warriors from Orsinium or the various strongholds scattered around north and west Tamriel. Stereotypically fond of heavy armour and two-handed weaponry."
+ ra_gada_warriorsDESCR: "Redguard warriors that are not too dissimilar from those responsible for Hammerfell's great military victories shortly after the migration from Yokuda. More suited to skirmish-style tactics than large open battles."
+ senche_cavalryDESCR: "Cavalry troops, predominantly Khajiti, mounted on the famous Senche-Tigers of Pellitine. Much more effective than horse cavalry in a significant proportion of Tamriel's terrain."
+ skyforge_infantryDESCR: "Nordic infantry equipped with weapons from Whiterun's legendary Skyforge."
+ tamrielic_shock_cavalryDESCR: "Cyrodilic horse cavalry, mounted on Anvil's famous white horses, more resistant to constant attack than any other in the province."
+ western_battlemageDESCR: "Battlemage infantry from Western Tamriel. Depending on the exact composition of the force, can serve as the core of a very potent offensive or defensive mage army."
