Started working on Event/Decisions overhaul
Currently incomplete. Will clean up excess files next commit.

--- a/localisation/tamriel_events_l_english.yml
+++ b/localisation/tamriel_events_l_english.yml
@@ -66,25 +66,25 @@
  cyrodiil_flag.EVTDESC12: "The new emperor hates us!"
  cyrodiil_flag.EVTOPTA12: "Okay"
  cyrodiil_warlord_other_opinion: "Cyrodilic Warlord"
- cyrodiil_religion.EVTNAME1: "People Turn to Daedra Worship"
- cyrodiil_religion.EVTDESC1: "The people in one of our provinces are now worshiping Daedra"
- cyrodiil_religion.EVTOPTA: "An interesting development"
- voidnights.EVTNAME1: "The Void Nights"
- voidnights.EVTDESC1: "The Moons Masser and Secunda have mysteriously disappeared from the night sky! At this time, we are unsure if this is merely an illusion or something more sinister. Regardless, this has understandably upset a large amount of the population, especially the Khajiit."
- voidnights.EVTOPTA1: "Hopefully this isn't permanent!"
- voidnights.EVTNAME2: "End Of The Void Nights"
- voidnights.EVTDESC2: "The Moons Masser and Secunda have reappeared in the night sky! The Thalmor of Alinor have taken responsibility for the moons' reppearance, claiming to have leveraged previously undiscovered Dawn Magicks. Regardless of whether their claims are true or not, it's comforting to see the pair in the sky once again."
- voidnights.EVTOPTA2: "What a relief!"
- voidnights.EVTNAME3: "Assasination of the Mane!"
- voidnights.EVTDESC3: "The Mane of Elsweyr has been assasinated! A group of Khajiit snuck into the Mane's palace in Torval in the middle of the night and slit his throat. The group responsible demand the dissolution of the Elsweyr Confederacy and the re-establishment of Pellitine and Anequina as client states of The Thalmor, the group who claimed responsibility for the reappearance of Masser and Secunda. We can either give into their demands, dissolving the Confederacy, or resist!"
- voidnights.EVTOPTA3: "The Thalmor are our saviors!"
- voidnights.EVTOPTB3: "We shall never agree to such humiliating terms!"
- voidnights.EVTNAME4: "Disollution of the Elsweyr Confederacy"
- voidnights.EVTDESC4: "The Thalmor Coup of the Elsweyr Confederacy has ended with a total victory for the rebel forces!"
- voidnights.EVTOPTA4: "Well, I guess that's that!"
- almalexia_restoration.EVTNAME1: "The Restoration of Almalexia"
- almalexia_restoration.EVTDESC1: "After the Sack of Almalexia during the Ascension War, the city has fallen from grace. But now, many years have passed and the city has finally started to recover. People are flocking back to the comforting walls of the city and merchants are setting up shop once more. Almalexia is starting to become a beacon of Dunmer civilization once again!"
- almalexia_restoration.EVTOPTA1: "Truly a wonderful sight to behold!"
- tear_restoration.EVTNAME1: "Rebuilding Tear"
- tear_restoration.EVTDESC1: "After the eruption of Red Mountain and the Ascension War, Tear was completely razed and the earth salted. But now, many years have passed and we can finally rebuild the city!"
- tear_restoration.EVTOPTA1: "Excellent!"
+ cyrodiil_religion.1.t: "People Turn to Daedra Worship"
+ cyrodiil_religion.1.d: "The people in one of our provinces are now worshiping Daedra"
+ cyrodiil_religion.1.a: "An interesting development"
+ voidnights.1.t: "The Void Nights"
+ voidnights.1.d: "The Moons Masser and Secunda have mysteriously disappeared from the night sky! At this time, we are unsure if this is merely an illusion or something more sinister. Regardless, this has understandably upset a large amount of the population, especially the Khajiit."
+ voidnights.1.a: "Hopefully this isn't permanent!"
+ voidnights.2.t: "End Of The Void Nights"
+ voidnights.2.d: "The Moons Masser and Secunda have reappeared in the night sky! The Thalmor of Alinor have taken responsibility for the moons' reppearance, claiming to have leveraged previously undiscovered Dawn Magicks. Regardless of whether their claims are true or not, it's comforting to see the pair in the sky once again."
+ voidnights.2.a: "What a relief!"
+ voidnights.3.t: "Assasination of the Mane!"
+ voidnights.3.d: "The Mane of Elsweyr has been assasinated! A group of Khajiit snuck into the Mane's palace in Torval in the middle of the night and slit his throat. The group responsible demand the dissolution of the Elsweyr Confederacy and the re-establishment of Pellitine and Anequina as client states of The Thalmor, the group who claimed responsibility for the reappearance of Masser and Secunda. We can either give into their demands, dissolving the Confederacy, or resist!"
+ voidnights.3.a: "The Thalmor are our saviors!"
+ voidnights.3.b: "We shall never agree to such humiliating terms!"
+ voidnights.4.t: "Disollution of the Elsweyr Confederacy"
+ voidnights.4.d: "The Thalmor Coup of the Elsweyr Confederacy has ended with a total victory for the rebel forces!"
+ voidnights.4.a: "Well, I guess that's that!"
+ almalexia_restoration.1.t: "The Restoration of Almalexia"
+ almalexia_restoration.1.d: "After the Sack of Almalexia during the Ascension War, the city has fallen from grace. But now, many years have passed and the city has finally started to recover. People are flocking back to the comforting walls of the city and merchants are setting up shop once more. Almalexia is starting to become a beacon of Dunmer civilization once again!"
+ almalexia_restoration.1.a: "Truly a wonderful sight to behold!"
+ tear_restoration.1.t: "Rebuilding Tear"
+ tear_restoration.1.d: "After the eruption of Red Mountain and the Ascension War, Tear was completely razed and the earth salted. But now, many years have passed and we can finally rebuild the city!"
+ tear_restoration.1.a: "Excellent!"
